Fix overflow bug + score position for parkgame

--- a/src/Components/games/ParkGame/parkGame.css
+++ b/src/Components/games/ParkGame/parkGame.css
@@ -64,8 +64,8 @@
 
 .score-bar {
     position: absolute;
-    top: 200px;
-    left: 200px;
+    top: 150px;
+    left: 150px;
     z-index: 2000;
     text-align: right;
     letter-spacing: 3px;
